# MelodAI

./: .dockerignore  .gitignore  ADMIN_SONGS_FEATURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FEATURE_TRACK_REMOVAL.md  FUNCTIONALITY.md  LICENSE  LYRICS_IMPROVEMENTS.md  README.md  Readme.md  SECURITY.md  ___.py  admin.html  chunk_lyrics.py  docker-compose.dokploy.yml  docker-compose.yml  example.env  index.html  login.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  schema.sql  screenshots.mjs
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/e2e/: helpers.ts  vitest.config.ts  vitest.pipeline.config.ts
frontend/e2e/browser/: admin.test.ts  auth.test.ts  player.test.ts
frontend/e2e/integration/: admin-extended.test.ts  admin.test.ts  auth.test.ts  credits.test.ts  favorites.test.ts  (+2 more)
frontend/src/: App.tsx
src/: add_system_status_table.py  app.py  chunk_lyrics.py  helpers.py  index.html  login.html  main.py  reset_db.py  schema.sql
src/models/: db.py
src/routes/: admin.py  auth.py  static.py  sync.py  track.py
src/services/: app_config.py  deezer.py  email.py  genius.py  lyric_translation.py  lyrics.py  reference_lyrics.py
src/static/: about.html  admin.html  admin_songs.html  index.html  login.html  status.html
src/utils/: constants.py  decorators.py  error_logging.py  file_handling.py  helpers.py  status_checks.py
(+58 files in other folders)
