[project]
name = "melodai"
version = "1.0.0"
description = "AI-powered karaoke web app"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "pycryptodome>=3.20",
    "python-dotenv>=1.0",
    "replicate>=0.25",
    "requests>=2.31",
    "openai>=1.12",
    "resend>=0.8",
    "werkzeug>=3.0",
    "lyricsgenius>=3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
